18/02/08 Celine Scornavacca & Julien Dutheil
* Bug fixed in TreeTemplate::newOutGroup.

21/01/08 Julien Dutheil
* New function TreeTools::checkIds, used in likelihood classes (included in
		version 1.5).
* Important bug fixed in RTreeLikelihood: derivatives are correct when nodes
  id are not reset.
* Important bug fixed in substitution mapping.
* Bug fixed in substitution models with frequency parameters (init from data) !

18/01/08 -*- Version 1.5.0. -*-

18/01/08 Julien Dutheil 
* DistanceEstimation and SitePatterns classes are now Clonable.

18/01/08 Celine Scornavacca & Julien Dutheil 
* New function getNode(name) in TreeTemplate
* New function searNodeWithName dans TreeTemplateTools
* Improved multitree support in Newick

13/01/08 Julien Dutheil
* DRASRTreeLikelihoodData class improved by using the SitePatterns class.

11/01/08 Julien Dutheil
* Inclusion in new namespace bpp.
* Bug fixed in DRNonHomogeneousTreeLikelihood.
* Fixed recently introduced bug in DRHomogeneousTreeLikelihood.

29/12/07 Julien Dutheil
* New class DRNonHomogeneousTreeLikelihood.
* Methods getLogLikelihood now sort terms before adding them.

24/12/07 Julien Dutheil
* Added support for invariants in rate distributions.

18/12/07 Céline Scornavacca & Julien Dutheil
* TreeTemplateTools::parenthesisToTree now sends exceptions in case of bad
format.
* Removed a 'unused variable' warning in NonHomogeneousSequenceSimulator.

21/11/07 Julien Dutheil
* Tree(Template)Tools do not throw exception if the root node do not have a
  branch length.

15/11/07 Julien Dutheil
* Bug fixed in clonage of empty DR*LikelihoodData.

14/11/07 Julien Dutheil
* New methods getAncestors and getLastCommonAncestor in TreeTools.

07/11/07 Julien Dutheil
* Nucleotide substitution models re-parametrized to remove constraint on
  equilibrium frequencies. These frequencies can now be fully optimized.
	Root frequencies in non-stationary models also updated.
* More bugs fixed due to the new heterogeneous models.