@@ -62,7 +62,7 @@ F84::F84(
 	//AbstractSubstitutionModel(alpha),
 	NucleotideSubstitutionModel(alpha)
 {
-	_parameters.addParameter(Parameter("kappa", kappa, &Parameter::R_PLUS));
+	_parameters.addParameter(Parameter("kappa", kappa, &Parameter::R_PLUS_STAR));
   _theta = piG + piC;
   _theta1 = piA / (1. - _theta);
   _theta2 = piG / _theta;
