@@ -96,7 +96,11 @@ double PseudoNewtonOptimizer::doStep() throw (Exception)
   {
     double  firstOrderDerivative = dynamic_cast<const DerivableSecondOrder *>(_function)->getFirstOrderDerivative(_params[i]);
     double secondOrderDerivative = dynamic_cast<const DerivableSecondOrder *>(_function)->getSecondOrderDerivative(_params[i]);
-    if(secondOrderDerivative <= 0)
+    if(secondOrderDerivative == 0)
+    {
+      movements[i] = 0;
+    }
+    else if(secondOrderDerivative < 0)
     {
       printMessage("!!! Second order derivative is negative for parameter " + _params[i] + "(" + TextTools::toString(_parameters[i]->getValue()) + "). No move performed.");
       //movements[i] = 0;  // We want to reach a minimum, not a maximum!
