@@ -1,3 +1,7 @@
+20/03/08 Julien Dutheil
+* Kappa parameter can no longer be 0 (avoid likelihood to be 0 in some cases)
+* Newton-Raphson algorithm fixed: deals with case when f'' is equal to zero.	
+
 18/02/08 Celine Scornavacca & Julien Dutheil
 * Bug fixed in TreeTemplate::newOutGroup.
 
